Change background to #38f from #333

--- a/docs/css-playground/rotate-shadow/index.scss
+++ b/docs/css-playground/rotate-shadow/index.scss
@@ -4,7 +4,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background: #333;
+    background: #38f;
     transition-duration: 0.5s;
     transition-property: transform box-shadow;
 }
