--- a/docs/css-playground/lovely-dog/bundle.css
+++ b/docs/css-playground/lovely-dog/bundle.css
@@ -990,6 +990,10 @@
   left: -70px;
   bottom: 40px; }
 
+body {
+  margin: 0;
+  background: #FE9A76; }
+
 body::after {
   content: 'Hover and make the dog\'s body seperate, ahahha!!!';
   display: block;
