--- a/docs/css-playground/rotate-shadow/bundle.css
+++ b/docs/css-playground/rotate-shadow/bundle.css
@@ -4,7 +4,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background: #333;
+  background: #38f;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
   -webkit-transition-property: -webkit-transform box-shadow;
